--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "functions",
+  "name": "web-app-from-scratch",
   "version": "1.0.0",
-  "main": "index.js",
+  "private": true,
   "license": "MIT",
   "dependencies": {
     "node-fetch": "^2.6.1"
